--- a/facility.html
+++ b/facility.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="img/BrainyKids-logo.png">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brainy Kids - Центр дитячого розвитку Вінниця. Підготовка до школи, дошколярик, англійська для дошкільнят, логопед.</title>
+    <title>Brainy Kids - Центр дитячого розвитку, Вінниця. Підготовка до школи, дошколярик, англійська для дошкільнят, логопед.</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -63,20 +63,21 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav mx-auto">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
-                    <a href="about.html" class="nav-item nav-link">About Us</a>
-                    <a href="classes.html" class="nav-item nav-link">Classes</a>
+                    <a href="index.html" class="nav-item nav-link">Головна</a>
+                    <a href="about.html" class="nav-item nav-link">Про нас</a>
+                    <a href="classes.html" class="nav-item nav-link">Заняття</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Меню</a>
                         <div class="dropdown-menu rounded-0 rounded-bottom border-0 shadow-sm m-0">
-                            <a href="facility.html" class="dropdown-item active">School Facilities</a>
-                            <a href="our-history.html" class="dropdown-item">Become A Teachers</a>
-                            <a href="appointment.html" class="dropdown-item">Make Appointment</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                            <a href="facility.html" class="dropdown-item active">Наші суперсили</a>
+                            <a href="our-history.html" class="dropdown-item">Наша історія</a>
+                            <a href="appointment.html" class="dropdown-item">Залишити заявку</a>
+                            <a href="testimonial.html" class="dropdown-item">Відгуки</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link">Contact Us</a>
+                    <a href="contact.html" class="nav-item nav-link">Контакти</a>
                 </div>
+                    <a id="socialModal" class="btn btn-primary rounded-pill px-3 d-none d-lg-block">З нами цікаво<i class="fas fa-share-alt ms-3"></i></a>
             </div>
         </nav>
         <!-- Navbar End -->
@@ -85,12 +86,12 @@
         <!-- Page Header End -->
         <div class="container-xxl py-5 page-header position-relative mb-5">
             <div class="container py-5">
-                <h1 class="display-2 text-white animated slideInDown mb-4">Facilities</h1>
+                <h1 class="display-2 text-white animated slideInDown mb-4">Наші суперсили</h1>
                 <nav aria-label="breadcrumb animated slideInDown">
                     <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="index.html">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Pages</a></li>
-                        <li class="breadcrumb-item text-white active" aria-current="page">Facilities</li>
+                        <li class="breadcrumb-item"><a href="index.html">Головна</a></li>
+                        <li class="breadcrumb-item"><a href="#">Меню</a></li>
+                        <li class="breadcrumb-item text-white active" aria-current="page">Наші суперсили</li>
                     </ol>
                 </nav>
             </div>
@@ -101,21 +102,32 @@
         <!-- Facilities Start -->
         <div class="container-xxl py-5">
             <div class="container">
-                <div class="text-center mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
-                    <h1 class="mb-3">School Facilities</h1>
-                    <p>Eirmod sed ipsum dolor sit rebum labore magna erat. Tempor ut dolore lorem kasd vero ipsum sit eirmod sit. Ipsum diam justo sed rebum vero dolor duo.</p>
+                <div class="mx-auto mb-5 wow fadeInUp" data-wow-delay="0.1s" style="max-width: 600px;">
+                    <h1 class="mb-3 text-center">Чому обирають саме нас?</h1>
+                    <p class="justify-text">
+                        Ми використовуємо сучасні, перевірені методики навчання, які поєднують ігрові форми, 
+                        творчі проєкти та захопливі пізнавальні заняття. У нашому центрі навчання – це не рутина, 
+                        а справжня пригода, де кожна дитина досліджує світ у своєму темпі й у комфортному середовищі.
+                    </p>
+                    <p class="justify-text">
+                        Завдяки індивідуальному підходу до кожного малюка, ми допомагаємо розвивати не лише знання, 
+                        а й важливі життєві навички – самостійність, критичне мислення, емоційний інтелект та вміння працювати в команді.
+                    </p>
+                    <p class="justify-text">
+                        BrainyKids – це місце, де дитина відчуває себе впевнено, розкриває свої таланти й отримує натхнення до навчання щодня.
+                    </p>
                 </div>
                 <div class="row g-4">
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
                         <div class="facility-item">
                             <div class="facility-icon bg-primary">
                                 <span class="bg-primary"></span>
-                                <i class="fa fa-bus-alt fa-3x text-primary"></i>
+                                <i class="fa fa-solid fa-users fa-3x text-primary"></i>
                                 <span class="bg-primary"></span>
                             </div>
                             <div class="facility-text bg-primary">
-                                <h3 class="text-primary mb-3">School Bus</h3>
-                                <p class="mb-0">Eirmod sed ipsum dolor sit rebum magna erat lorem kasd vero ipsum sit</p>
+                                <h3 class="text-primary mb-3">Маленькі групи до 8 дітей</h3>
+                                <p class="mb-0">Завдяки невеликим групам, ми приділяємо максимум уваги кожній дитині, розкриваючи її унікальні здібності</p>
                             </div>
                         </div>
                     </div>
@@ -123,12 +135,12 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-success">
                                 <span class="bg-success"></span>
-                                <i class="fa fa-futbol fa-3x text-success"></i>
+                                <i class="fa fa-solid fa-hand-holding-heart fa-3x text-success"></i>
                                 <span class="bg-success"></span>
                             </div>
                             <div class="facility-text bg-success">
-                                <h3 class="text-success mb-3">Playground</h3>
-                                <p class="mb-0">Eirmod sed ipsum dolor sit rebum magna erat lorem kasd vero ipsum sit</p>
+                                <h3 class="text-success mb-3">Професійні педагоги</h3>
+                                <p class="mb-0">Наша команда - це досвідчені фахівці, які щиро люблять дітей та знають, як знайти підхід до кожної дитини</p>
                             </div>
                         </div>
                     </div>
@@ -136,25 +148,77 @@
                         <div class="facility-item">
                             <div class="facility-icon bg-warning">
                                 <span class="bg-warning"></span>
-                                <i class="fa fa-home fa-3x text-warning"></i>
+                                <i class="fa fa-solid fa-user-graduate fa-3x text-warning"></i>
                                 <span class="bg-warning"></span>
                             </div>
                             <div class="facility-text bg-warning">
-                                <h3 class="text-warning mb-3">Healthy Canteen</h3>
-                                <p class="mb-0">Eirmod sed ipsum dolor sit rebum magna erat lorem kasd vero ipsum sit</p>
+                                <h3 class="text-warning mb-3">Власні програми розвитку</h3>
+                                <p class="mb-0">Ми враховуємо індивідуальні особливості кожної дитини, щоб забезпечити її гармонійний розвиток</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.7s">
                         <div class="facility-item">
+                            <div class="facility-icon bg-danger">
+                                <span class="bg-danger"></span>
+                                <i class="fa fa-solid fa-icons fa-3x text-danger"></i>
+                                <span class="bg-danger"></span>
+                            </div>
+                            <div class="facility-text bg-danger">
+                                <h3 class="text-danger mb-3">Комфортна атмосфера</h3>
+                                <p class="mb-0">У нашому центрі створено комфортний простір, де діти почуваються як удома, ми дбаємо про кожну деталь</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="0.8s">
+                        <div class="facility-item">
                             <div class="facility-icon bg-info">
                                 <span class="bg-info"></span>
-                                <i class="fa fa-chalkboard-teacher fa-3x text-info"></i>
+                                <i class="fa-solid fa-handshake fa-3x text-info"></i>
                                 <span class="bg-info"></span>
                             </div>
                             <div class="facility-text bg-info">
-                                <h3 class="text-info mb-3">Positive Learning</h3>
-                                <p class="mb-0">Eirmod sed ipsum dolor sit rebum magna erat lorem kasd vero ipsum sit</p>
+                                <h3 class="text-info mb-3">Співпраця з батьками</h3>
+                                <p class="mb-0">Ми цінуємо партнерство з батьками та підтримуємо відкритий діалог щодо розвитку їхніх дітей</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="1.0s">
+                        <div class="facility-item">
+                            <div class="facility-icon bg-papers">
+                                <span class="bg-papers"></span>
+                                <i class="fa-solid fa-file-contract fa-3x text-papers"></i>
+                                <span class="bg-papers"></span>
+                            </div>
+                            <div class="facility-text bg-papers">
+                                <h3 class="text-papers mb-3">Робочі зошити</h3>
+                                <p class="mb-0">Для кожного курсу є робочий зошит власної розробки. Щорічне оновлення програм та робочих зошитів</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="1.1s">
+                                                <div class="facility-item">
+                            <div class="facility-icon bg-softskills">
+                                <span class="bg-softskills"></span>
+                                <i class="fa-solid fa-people-arrows fa-3x text-softskills"></i>
+                                <span class="bg-softskills"></span>
+                            </div>
+                            <div class="facility-text bg-softskills">
+                                <h3 class="text-softskills mb-3">Soft skills</h3>
+                                <p class="mb-0">У нашому центрі діти мають можливість спілкуватися з однолітками, вчитися працювати в команді</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 wow fadeInUp" data-wow-delay="1.2s">
+                        <div class="facility-item">
+                            <div class="facility-icon bg-location">
+                                <span class="bg-location"></span>
+                                <i class="fa-solid fa-location-pin fa-3x text-location"></i>
+                                <span class="bg-location"></span>
+                            </div>
+                            <div class="facility-text bg-location">
+                                <h3 class="text-location mb-3">Зручне місце розташування</h3>
+                                <p class="mb-0">Центр розташований в самому серці Вінниці, мк-рн Вишенька, просп. Юності, 14 А</p>
                             </div>
                         </div>
                     </div>
@@ -244,7 +308,7 @@
                 <div class="copyright">
                     <div class="row">
                         <div class="col-md-6 text-center text-md-start mb-3 mb-md-0">
-                            &copy; <a class="" href="#">BrainyKids </a>, All Right Reserved. 
+                            &copy; <a class="" href="#">BrainyKids </a>, All Right Reserved
                         </div>
                         <div class="col-md-6 text-center text-md-end">
                             <div class="footer-menu">
@@ -262,6 +326,35 @@
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
 
+        <!-- Social Modal Popup -->
+    <div class="modal fade" id="socialModalPopup" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="modalLabel">Підписуйтесь на нас, будемо дружити!</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Веселі моменти, корисні поради й новини — у наших соцмережах.</p>
+                    <div class="d-flex justify-content-center pt-2">
+                        <a class="btn btn-social btn-instagram" href="https://www.instagram.com/brainy_kids_vn?igsh=amp3ODhtYW81ZjB5">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                        <a class="btn btn-social btn-facebook" href="https://www.facebook.com/share/16Bw61kLCU/">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                        <a class="btn btn-social btn-tiktok" href="https://www.tiktok.com/@.brainy.kids?_t=ZM-8wD4I3RKgsQ&_r=1">
+                            <i class="fab fa-tiktok"></i>
+                        </a>
+                        <a class="btn btn-social btn-telegram" href="tel:+380966987178">
+                            <i class="fab fa-telegram-plane"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
@@ -269,6 +362,7 @@
     <script src="lib/easing/easing.min.js"></script>
     <script src="lib/waypoints/waypoints.min.js"></script>
     <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="js/open_modal_popup.js"></script>
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
