--- a/classes.html
+++ b/classes.html
@@ -142,8 +142,8 @@
                                     <div class="d-flex align-items-center flex-wrap text-center text-md-start">
                                         <!-- User 1 -->
                                         <div class="d-flex align-items-center mb-3 me-md-4">
-                                            <img class="rounded-circle flex-shrink-0" src="img/user_1.jpg" alt="" style="width: 45px; height: 45px;">
-                                            <div class="ms-3">
+                                            <img class="rounded-circle flex-shrink-0" src="img/user_1.jpg" alt="" style="margin: 0.5rem; width: 45px; height: 45px;">
+                                            <div class="ms-2">
                                                 <h6 class="text-primary mb-1">Лілія <br>Гусонька</h6>
                                                 <small class="co-fou-text">Викладач</small>
                                             </div>
@@ -151,8 +151,8 @@
 
                                         <!-- User 2 -->
                                         <div class="d-flex align-items-center mb-3">
-                                            <img class="rounded-circle flex-shrink-0" src="img/user_2.jpg" alt="" style="width: 45px; height: 45px;">
-                                            <div class="ms-3">
+                                            <img class="rounded-circle flex-shrink-0" src="img/user_2.jpg" alt="" style="margin: 0.5rem; width: 45px; height: 45px;">
+                                            <div class="ms-2">
                                                 <h6 class="text-primary mb-1">Оксана <br>Затоковенко</h6>
                                                 <small class="co-fou-text">Викладач</small>
                                             </div>
