add more new Classes items

--- a/index.html
+++ b/index.html
@@ -314,7 +314,9 @@
                                 <img class="img-fluid rounded-circle" src="img/classes-1.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">Підготовка до школи</a>
+                                <a class="d-block text-center h3 mt-3 mb-4">Підготовка до школи <br>
+                                    <small class="co-fou-text">(1 рік до школи)</small>
+                                </a>
                                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between mb-4">
                                     <div class="d-flex align-items-center flex-wrap text-center text-md-start">
                                         <!-- User 1 -->
@@ -366,7 +368,9 @@
                                 <img class="img-fluid rounded-circle" src="img/classes-2.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">Два роки до школи</a>
+                                <a class="d-block text-center h3 mt-3 mb-4">Підготовка до школи <br>
+                                    <small class="co-fou-text">(2 роки до школи)</small>
+                                </a>
                                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between mb-4">
                                     <div class="d-flex align-items-center flex-wrap text-center text-md-start">
                                         <!-- User 1 -->
@@ -393,7 +397,7 @@
                                     <div class="col-4">
                                         <div class="border-top border-3 border-primary pt-2">
                                             <h6 class="text-primary mb-1">Вік:</h6>
-                                            <small>4-6 років</small>
+                                            <small>4-5 років</small>
                                         </div>
                                     </div>
                                     <div class="col-4">
@@ -418,7 +422,9 @@
                                 <img class="img-fluid rounded-circle" src="img/classes-3.jpg" alt="">
                             </div>
                             <div class="bg-light rounded p-4 pt-5 mt-n5">
-                                <a class="d-block text-center h3 mt-3 mb-4" href="">Англійська мова</a>
+                                <a class="d-block text-center h3 mt-3 mb-4">Експрес-курс <br>
+                                    <small class="co-fou-text">(3 місяці до школи)</small>
+                                </a>
                                 <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between mb-4">
                                     <div class="d-flex align-items-center flex-wrap text-center text-md-start">
                                         <!-- User 1 -->
@@ -429,6 +435,15 @@
                                                 <small class="co-fou-text">Викладач</small>
                                             </div>
                                         </div>
+
+                                        <!-- User 2 -->
+                                        <div class="d-flex align-items-center mb-3">
+                                            <img class="rounded-circle flex-shrink-0" src="img/user_2.jpg" alt="" style="margin: 0.5rem; width: 45px; height: 45px;">
+                                            <div class="ms-2">
+                                                <h6 class="text-primary mb-1">Оксана <br>Затоковенко</h6>
+                                                <small class="co-fou-text">Викладач</small>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
 
@@ -436,7 +451,7 @@
                                     <div class="col-4">
                                         <div class="border-top border-3 border-primary pt-2">
                                             <h6 class="text-primary mb-1">Вік:</h6>
-                                            <small>4-6 років</small>
+                                            <small>6-7 років</small>
                                         </div>
                                     </div>
                                     <div class="col-4">
@@ -448,7 +463,7 @@
                                     <div class="col-4">
                                         <div class="border-top border-3 border-warning pt-2">
                                             <h6 class="text-warning mb-1">Групи:</h6>
-                                            <small>до 8 дітей / індивідуально</small>
+                                            <small>парні (2 дитини) / індивідуально</small>
                                         </div>
                                     </div>
                                 </div>
